# schul-dashboard

./: .claudeignore  .gitignore  AGENTS.md  LICENSE  LOADING_SCREEN_DOCUMENTATION.md  README.md  diff.txt  docker-compose.selinux.yaml  docker-compose.yaml  docker-compose.yml  test-frac.js
geoip-service/: .dockerignore  .env.example  Cargo.toml  Dockerfile
geoip-service/src/: geoip.rs  main.rs  update.rs
server/: .env  .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.dev  app.ts  benchmark.js  benchmark2.js  eslint.config.mjs  package-lock.json  package.json  routes.js  routes.ts  server.js  server.ts  test-benchmark.js  test-reorder-perf.ts  tsconfig.json
server/.sqlx/: query-004dc356766b8ac9b169aade79e39a68c38efd833166bbebed843c814c3d4340.json  query-007109895fbb6a5848e413658593d1d5c405282d6018599baf1c474e99a1b5ed.json  query-00a4b93badfb1655249560ab9d3c86672ffe87ad3bfebec4a3a1316413f82b7e.json  query-00c478903c989b3516861fe0a7826c49d27f10cd080d6fbc2e364dbc69667769.json  query-012b1c561729a1b80ff616b6c9ed3a806055d136188aba5d0eb002c1cb6d3d93.json  query-026ad252b9250c211c8a1f2d580bb760ebb1d259b568650747a7871a7b327def.json  query-028009b10b3bc985d0c8dc328dc242ed3c598f3db2ef2a77bf5007bfd900536a.json  query-0318bd04c338398c8bf32f748d938709035c0be9abff4c148a548a373545933e.json  query-036bc1d5b9153b20c5d3debbc51976f6fe91d5f2224a775b4fa0c77dd915ef91.json  query-055aa7389d5f87a4f0a55753dcc7b5a4847eeb9302e55caf2a95f34325281f00.json  query-05ccda4eeec437a11dd305d335f679cdd2bee18c79e91797a5a6f4836816fd91.json  query-069c49f679f642cc4847f92dde23e475887a53895c25edb0e59bed376b20a11f.json  query-07adf7bac243fdb23cf65cd2ad1ca858d38d0c88774678d6a0fe1fa232551cba.json  query-08faaa6451af40a483b5e37c26e6ac41ce360ffeca0b466dfa0ad32928796fc3.json  query-09a2e17a140b4faa7d61aa0f1b3c9bc0a7b867744cb18b3883cb70ada527c7c1.json  query-09ce6d975853f76af39186a33515db6c204f173a048abf9d4bb7fdeaea6c247d.json  query-0a51f479ad6d24b47a198a8f1487268ef76343dc5cda7b59fbc754c522212511.json  query-0a7d113cdc059c55df4024e073fd303aa53ca2cd46634c64066cde04d2b8fb58.json  query-0a95673bdc026bb97e5f46cd4717432e04e309661d2901ab21809925bb11fd6d.json  query-0b9d459fb4046d8372503930ab7f3c9dd9664e5228bca452560de4c55b1a9377.json  query-0bad517553ecb0f28305f57228dc10e832c72529e84c68ba0323bf737a5138dd.json  query-0cf2f35e9ccc6a1345f1567c5c42b42f7664ed48badc55cb615d5993a3bf5f15.json  query-0cfdbb249e1ffaa334183975cc0497c3fefe6c13dd2f56fdc9e9bf4887f9b944.json  query-0dd6066aeef3c61bcf8f55f06f561cbdb28b81e7fe3ea7658adf9c04e2e936ab.json  query-0e432a3fffa292c689ce5487e75b95a747ec76a4c32418ec02ab39d8050f2c81.json  query-0e8850ba9eef4bb5f6866d1e0464909c2ec7f30613a05488a35264032e320ceb.json  query-0ee311d75a2c30927cbdd2b6b997b6e436fdc4d33fd8a72ef59b526de562d492.json  query-0ef24c6f8ccac0735e217b9e91356052917fa7daa307a67cbd4da0c577204790.json  query-0f890acfddcf40e48d1ea173b086ddbc3722c2ad1a81bd2136e3bdef2cdc08eb.json  query-0fa3e28170469ae1dbd749fbcf042b92adcf335a378ab29169164523d7545f02.json  query-0fc9fe8345324c0c83e20faf94de4c05706fab2355750cb1e1a5da1bbf2adc5b.json  query-111cf8fb5f151c747128494006a60525e7227bf86b4bc7f9833e3472e8fa5a85.json  query-12373ed680107eaa0aa6f688090cfc9a1d0126c7e741c489e351aacc5e5257ac.json  query-128da9d2b66758f8bc3c533a3569f8a20eb86d743839f0f820ff971fa6e5100d.json  query-1293a6a67ecf04f3fe63a4d560f20b9883ec26fb4352705a1666b1d7f345d6aa.json  query-12976446806837ddccf9fb33fcb621b338bd7e0bd10536cb9af4a968d7e1de62.json  query-1390fecf2e94628be68944c416d0eb4af8177b072cc19ceeb46eb71980a083ba.json  query-1393b50bfec5e490da7aac6d8098fc2f9f5c80a706c70be165a5f7699e1e371e.json  query-1453079609bf196fa9a524efee8f229a2f6cae29564864b868e8624e1f14164a.json  query-14dbab3432f0dedfde5ea4d3dcce640fd7113454a9a2229445f88e92202b94bf.json  (+346 more)
server/db/: db.js  db.ts
server/middleware/: csrf.js  csrf.ts  csrf_test.js  mfaAuth.ts  rateLimiters.js  rateLimiters.ts  tenantContext.ts  userAuth.js  userAuth.ts  validation.js  validation.ts
server/migrations/: 0001_init.sql  0002_add_role_version.sql  0003_add_role_version_to_users.sql  0004_add_group_invites.sql  0005_remove_group_passcode.sql  0006_consolidate_cleanup.sql  0007_items_created_by_set_null.sql  0008_items_created_by_nullable.sql  0009_cleanup_group_invites.sql  0010_add_active_group_id_to_refresh_tokens.sql  0011_remove_is_active_from_subjects.sql  0012_update_group_invites_for_log.sql  0013_remove_category_from_reports.sql  0014_add_show_as_popup_to_announcements.sql  0015_add_password_reset_attempts.sql  0016_remove_unique_group_name.sql  0017_remove_show_as_popup_announcements.sql  0018_remove_get_unread_status_and_upsert_user_tenant_visit_functions.sql  0019_add_message_reports.sql  0020_reports_add_details_column_and_remove_legacy_columns.sql
server/routes/: auth.js  auth.ts  doc.js  doc.ts  groupAdmin.ts  groups.js  groups.ts  items.js  items.ts  mfa.ts  superAdmin.js  superAdmin.ts  system.js  system.ts  timetable.js  timetable.ts  todos.ts  user.js  user.ts
server/src/: app.module.ts  auth.rs  common.rs  config.rs  error.rs  group.rs  jobs.rs  main.rs  main.ts  messages.rs  oauth.rs  schedule.rs  state.rs  super_admin.rs  user.rs
server/src/auth/: auth.controller.ts  auth.module.ts  auth.service.ts  cookies.rs  (+7 more)
server/test/: app.e2e-spec.ts  jest-e2e.json  setup.ts  test-env.ts
server/types/: fractional-indexing.d.ts  index.ts  otplib.d.ts
server/utils/: email.js  email.ts  encryption.ts  helpers.js  helpers.ts  modelHelpers.ts  nameGenerator.ts
(+1380 files in other folders)
