[package]
name = "geoip-service"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
tokio = { version = "1.5", features = ["full"] }
maxminddb = "0.28"
reqwest = { version = "0.13", default-features = false, features = ["rustls-tls", "json"] }
flate2 = "1.1"
tar = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tempfile = "3.27"
dotenvy = "0.15"
