[package]
name = "server"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "server"
path = "src/main.rs"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
opt-level = 3

[dependencies]
axum = { version = "0.8", features = ["macros", "http2"] }
axum-extra = { version = "0.12", features = ["cookie", "cookie-private", "typed-header"] }
tower = { version = "0.5", features = ["util", "limit"] }
tower-http = { version = "0.6", features = ["trace", "cors", "compression-gzip", "request-id", "timeout"] }
hyper = { version = "1.9", features = ["full"] }
cookie = "0.18"
tokio = { version = "1.52", features = ["full"] }
sqlx = { version = "0.9", default-features = false, features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "chrono",
    "json",
    "migrate",
    "macros",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
validator = { version = "0.20", features = ["derive"] }
argon2 = "0.5"
jsonwebtoken = "10.4"
rand = "0.10"
sha2 = "0.11"
hex = "0.4"
base64 = "0.22"
subtle = "2.6"
uuid = { version = "1.23", features = ["v4", "serde"] }
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls-tls"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
thiserror = "2.0"
anyhow = "1"
dotenvy = "0.15"
once_cell = "1.21"
